--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,8 +1,8 @@
 name: Publish Docker image
 
 on:
-  push:
-    branches: ['main']
+  schedule:
+    - cron:  '0 0 1 * *'
 
 jobs:
   push_to_registry:
