--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,6 +3,9 @@ name: Publish Docker image
 on:
   schedule:
     - cron:  '0 0 1 * *'
+  push:
+    branches:
+      - latest
 
 jobs:
   push_to_registry:
